# cmdfx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  INSTALLER_README.txt  Info.plist  LICENSE.rtf  README.md  annotated.html  asan.sh  canvas_8h_source.html  check-format.sh  classes.html  dir_11ba6eecdbd4d56198a5b2a914dd7895.html  dir_4d9c57e7d690808a8660fa1acc6a763b.html  dir_7411687fe8e05728f5b5fb3661050461.html  dir_812893866f1fac8f31508f9678534b68.html  dir_a6fae492aff6df036906f27bae436c6d.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d57baba9f97457737bc2ba6c8424a2ea.html  dir_f39ea75f0d073c89babb60f4e79671e6.html  dir_fd613db7ac96c74c72e7598827ee0669.html  doxygen.sh  doxygen_crawl.html  files.html  format.sh  functions.html  functions_func.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  (+40 more)
.githooks/: pre-commit
.github/: release.json
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  report-a-bug.yml
.github/workflows/: build.yml  codeql.yml  release.yml
Formula/: cmdfx.rb
assets/: cmdfx.icns
d0/d3f/: util_8hpp.html  util_8hpp_source.html
d0/d85/: structCmdFX__Button-members.html
d0/d87/: classCmdFX_1_1SpriteMotion-members.html
d1/d20/: classCmdFX_1_1Sprite-members.html
d1/d4c/: path_8hpp.html  path_8hpp_source.html
d1/d55/: engine_8h.html  engine_8h_source.html
d1/d89/: costumes_8h.html  costumes_8h_source.html
d1/d99/: mass_8hpp.html  mass_8hpp_source.html
d1/dac/: classCmdFX_1_1SpriteMotion.html
d1/dbc/: core_2scenes_8h.html  core_2scenes_8h_source.html
d1/dc8/: namespaceCmdFX_1_1Engine.html
d1/df0/: namespaceCmdFX_1_1SpriteForces.html
d1/dfd/: classCmdFX_1_1SceneButtons-members.html
d2/d01/: keys_8h.html  keys_8h_source.html
d2/d28/: structCmdFX__ResizeEvent-members.html
d2/d2e/: structCmdFX__SpriteCostumes.html
d2/d40/: structCmdFX__KeyEvent-members.html
d2/da8/: classCmdFX_1_1SpriteMass-members.html
d2/dc7/: physics_2util_8h.html  physics_2util_8h_source.html
d2/dfc/: md__2home_2runner_2work_2cmdfx_2cmdfx_2CONTRIBUTING.html
d2/dff/: switch_8h.html  switch_8h_source.html
d3/d19/: core_2util_8hpp.html  core_2util_8hpp_source.html
d3/d3a/: classCmdFX_1_1Vector-members.html  motion_8hpp.html  motion_8hpp_source.html
d3/d62/: player_8h.html  player_8h_source.html
d3/d75/: motion_8h.html  motion_8h_source.html
d3/d7a/: structCmdFX__MouseEvent-members.html
d3/d93/: structCmdFX__Event-members.html
d3/dc0/: structCmdFX__ButtonEvent.html
d3/dc7/: canvas_8hpp.html  canvas_8hpp_source.html
d3/de6/: classCmdFX_1_1SpriteCostumes-members.html
d3/def/: sprites_8h.html  sprites_8h_source.html
d4/d98/: scenes_8h.html  scenes_8h_source.html
d4/da0/: classCmdFX_1_1Button-members.html
d4/dcf/: canvas_8h.html  canvas_8h_source.html
d4/dec/: namespaceCmdFX_1_1SceneEngine.html
d5/d08/: device_8hpp.html  device_8hpp_source.html
d5/d57/: namespaceCmdFX_1_1Window.html
d5/d63/: mass_8h.html  mass_8h_source.html
d5/d78/: builder_8h.html  builder_8h_source.html
d5/dd3/: structCmdFX__ButtonEvent-members.html
d6/d1e/: force_8hpp.html  force_8hpp_source.html
d6/d5e/: screen_8hpp.html  screen_8hpp_source.html
d6/da7/: classCmdFX_1_1Scene-members.html
d7/d0e/: button_8h.html  button_8h_source.html
d7/d30/: classCmdFX_1_1Button.html
d7/d39/: sound_8hpp_source.html  structCmdFX__Sprite.html
d7/d41/: classCmdFX_1_1Vector.html
d7/d6c/: cmdfx_8hpp.html  cmdfx_8hpp_source.html
d7/db2/: classCmdFX_1_1Switch-members.html
d7/dca/: namespaceCmdFX_1_1Device.html
d7/dd4/: path_8h.html  path_8h_source.html
d8/d03/: ui_2scenes_8hpp.html  ui_2scenes_8hpp_source.html
d8/d3c/: util_8h.html  util_8h_source.html
d8/d4f/: structCmdFX__SpriteCostumes-members.html
d8/d70/: classCmdFX_1_1SceneButtons.html
d8/d8e/: classCmdFX_1_1Scene.html
d8/df4/: namespaceCmdFX_1_1Sound.html
d8/dfb/: classCmdFX_1_1SpriteCostumes.html
d9/d04/: switch_8hpp.html  switch_8hpp_source.html
d9/d73/: physics_2util_8hpp.html  physics_2util_8hpp_source.html
d9/d88/: sound_8h.html  sound_8h_source.html
d9/de4/: cmdfx_8h.html  cmdfx_8h_source.html
da/d04/: core_2util_8h.html  core_2util_8h_source.html
da/d58/: deprecated.html
da/d86/: classCmdFX_1_1SpriteMass.html
da/d9d/: animation_2canvas_8h.html  animation_2canvas_8h_source.html
da/de6/: namespaceCmdFX_1_1Screen.html
db/d4b/: button_8hpp.html  button_8hpp_source.html
db/d6d/: namespaceCmdFX_1_1Builder.html
db/d6e/: classCmdFX_1_1Sprite.html
db/dd2/: events_8h.html  events_8h_source.html
db/dd7/: costumes_8hpp.html  (+1 more)
docs/: Doxyfile.in
include/: README.md  cmdfx.h  cmdfx.hpp
samples/: README.md  collision.c  launcher.c  maze.c  sound_example.c  square-adventure.c
scripts/: setup-hooks.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  (+63 more)
test/: CMakeLists.txt
test/src/: test.h
test/src/common/: canvas_clear.c  canvas_dimensions.c  screen.c  util.c  util_color_lerp.c  util_math_clamp.c  util_math_lerp.c  util_time.c
test/src/core/: builder_color.c  canvas_dimensions.c  costumes.c  curses.c  scenes.c  scenes_layers.c  screen.c  sprites.c  sprites_costumes.c  sprites_move.c  sprites_uid.c  util_color_lerp.c  util_math_clamp.c  util_math_lerp.c  util_time.c
test/src/manual/: README.md  canvas_animated.c  canvas_print.c  curses.c  events_key.c  events_mouse.c  events_resize.c  sprites_ansi.c  sprites_move.c  sprites_resize.c
test/src/physics/: collision.c  determinism.c  engine.c  force.c  lifecycle.c  mass.c  motion.c
test/src/sound/: test_sound.c
(+145 files in other folders)
